Fin seccion 5 - DBZ module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<h1>{{title}}</h1>
-<hr>
+<!-- <h1>{{title}}</h1>
+<hr> -->
 
 
-<hr>
-
+<!-- <hr>
 <app-counter></app-counter>
-
 <hr>
 
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+<!-- SECCION 5 DBZ MODULE -->
+
+<app-dbz-page-name></app-dbz-page-name>
